total in contact

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -162,6 +162,19 @@
 						</login>
 					</element>
 					<element style="left: 33.34%;">
+						<users>
+							<table>
+								<thead>
+									<tr>
+										<th style="width:20%">Name</th>
+										<th style="width:10%">Punkte</th>
+										<th style="width:10%">Verifiziert</th>
+										<th style="width:60%">Bemerkung</th>
+									</tr>
+								</thead>
+								<tbody></tbody>
+							</table>
+						</users>
 					</element>
 					<element style="left: 66.67%; padding-bottom: 6em; text-align: center;">
 						<b>Impressum</b><br />
