--- a/src/web/index.html
+++ b/src/web/index.html
@@ -122,7 +122,7 @@
 						</login>
 					</element>
 					<element style="left: 33.34%;">
-						<users>
+						<user>
 							<table>
 								<thead>
 									<tr>
@@ -134,7 +134,7 @@
 								</thead>
 								<tbody></tbody>
 							</table>
-						</users>
+						</user>
 					</element>
 					<element style="left: 66.67%; padding-bottom: 6em; text-align: center;">
 						<b>Impressum</b><br />
