--- a/src/web/admin/index.html
+++ b/src/web/admin/index.html
@@ -45,17 +45,8 @@
 		<input />
 		<button onclick="api.init()">Einloggen</button>
 	</login>
-	<popup>
-		<close onclick="ui.popupClose()"></close>
-		<content></content>
-	</popup>
-	<progressbar>
-		<loader>
-			<div class="one"></div>
-			<div class="two"></div>
-			<div class="three"></div>
-		</loader>
-	</progressbar>
+	<dialog-popup></dialog-popup>
+	<progress-bar></progress-bar>
 </body>
 
 </html>
