--- a/src/web/index.html
+++ b/src/web/index.html
@@ -114,7 +114,12 @@
 				</div>
 			</login>
 		</element>
-		<element style="background: rgba(20, 100, 250, 0.1); display: none;" class="history">
+		<element style="background: rgba(255, 210, 50, 0.1); display: none;" class="history">
+			<button class="icon prev" onclick="action.imageNavigate(false)" style="left: 1em;">&lt;</button>
+			<history></history>
+			<button class="icon next" onclick="action.imageNavigate(true)" style="right: 1em;">&gt;</button>
+		</element>
+		<element style="background: rgba(20, 100, 250, 0.1); display: none;" class="user">
 			<user>
 				<table>
 					<thead>
