--- a/src/web/index.html
+++ b/src/web/index.html
@@ -44,7 +44,7 @@
 	<error></error>
 	<header>
 		<h2></h2>
-		<button onclick="action.logoff()" name="logout" class="icon">⏏</button>
+		<button onclick="action.logoff()" name="logout" class="icon">⇪</button>
 	</header>
 	<container>
 		<element class="intro">
