--- a/src/web/index.html
+++ b/src/web/index.html
@@ -43,7 +43,7 @@
 <body onload="action.init()">
 	<error></error>
 	<header>
-		<h2></h2>
+		<span></span>
 		<button onclick="action.logoff()" name="logout" class="icon">
 			<svg fill="#000000" width="200px" height="200px" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
 				<g>
