--- a/src/web/index.html
+++ b/src/web/index.html
@@ -41,8 +41,8 @@
 </head>
 
 <body onload="action.init()">
-	<h2></h2>
-	<button onclick="action.logoff()" name="logout" class="icon">
+	<h2 style="display: none;" name="groupname"></h2>
+	<button onclick="action.logoff()" name="logoff" class="icon" style="display: none;">
 		<svg fill="#000000" width="200px" height="200px" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
 			<g>
 				<path
