--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,21 +2,19 @@
 
 <head>
 	<title>WhatsApp to PDF</title>
-	<meta property="og:title" content="WhatsApp to PDF Converter" />
+	<meta property="og:title" content="Events end · memories live on!" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://schafkopf.studio" />
 	<meta property="og:image" content="https://schafkopf.studio/image/icon512.png" />
 	<meta property="og:image:type" content="image/png" />
-	<meta property="og:image:width" content="600" />
-	<meta property="og:image:height" content="315" />
+	<meta property="og:image:width" content="512" />
+	<meta property="og:image:height" content="512" />
 	<meta property="og:description"
-		content="For Lovers only! Convert your WhatsApp chat to PDF including word clouds, charts, easy navigation, etc." />
+		content="Organize events, make unforgettable memories, share them in your community." />
 	<meta name="Copyright" content="JNet Quality Consulting GmbH, Munich, Germany. All rights reserved." />
 	<meta name="email" content="support@schafkopf.studio" />
-	<meta name="description"
-		content="For Lovers only! Convert your WhatsApp chat to PDF including word clouds, charts, easy navigation, etc." />
-	<meta name="keywords"
-		content="WhatsApp Chat Verlauf mit Bildern drucken PDF export umwandeln herunterladen erstellen speichern alternative Android iphone ios PC history image print convert download create save" />
+	<meta name="description" content="Organize events, make unforgettable memories, share them in your community." />
+	<meta name="keywords" content="events, memories, groups, hobbies, leisure time, pictures, scores" />
 	<meta http-equiv="Content-Security-Policy"
 		content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' blob: data: https://schafkopf.studio http://localhost:9000; font-src 'self'; connect-src 'self' https://schafkopf.studio http://localhost:9001;">
 	<meta name="robots" content="index,follow" />
