--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>WhatsApp to PDF</title>
+	<title>Schafkopf Studio</title>
 	<meta property="og:title" content="Events end · memories live on!" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://schafkopf.studio" />
