--- a/src/web/index.html
+++ b/src/web/index.html
@@ -62,8 +62,8 @@
 			<div class="title">
 				<br />
 				<b>Events</b>
-				<button class="icon participate" onclick="action.openParticipate()">✓</button>
-				<button class="icon add" onclick="action.openAdd()">+</button>
+				<button class="icon participate" onclick="dialog.openParticipate()">✓</button>
+				<button class="icon add" onclick="dialog.openAdd()">+</button>
 			</div>
 			<event style="display: none;">
 				<sortable-table style="height: fit-content;"></sortable-table>
